Implementación de almacenamiento seguro con soporte para múltiples proveedores (Windows, MacOS, Linux, password basada), migración automática de datos legados, integración con `MainUI`, y pruebas unitarias ampliadas.